# System_Monitor

./: README.md
system_monitor/backend/: CMakeLists.txt
system_monitor/backend/include/dto/: SystemInfo.hpp
system_monitor/backend/src/: main.cpp
system_monitor/backend/src/monitors/: Monitor.cpp  Monitor.hpp
system_monitor/backend/src/web/: WebServer.cpp  WebServer.hpp
system_monitor/frontend/: app.ts  index.html  style.css
